organised html, css files. separated header and cube loader into partials. added title to templates sprite sheet for svg icons. user added page for confirmation of user addition.

--- a/app/static/components/cube-loader.css
+++ b/app/static/components/cube-loader.css
@@ -1,6 +1,7 @@
 /* From Uiverse.io by andrew-demchenk0 */ 
 .cube-loader {
   position: relative;
+  top: 30px;
   left: 50%;
   width: 75px;
   height: 75px;
