added new route show_all_user data to check current db entries added Flask-Migrate for database migrations added Flask-SQLAlchemy for working with migrations and simplifying database interactions removed Base class and replaced with db.Model from Flask-SQLAlchemy renamed DataBaseManager class to UserDataBase for clarity and updated its methods to use Flask-SQLAlchemy`

--- a/app/static/css/data_form.css
+++ b/app/static/css/data_form.css
@@ -1,5 +1,6 @@
 .data-form,
-.review-submitted {
+.review-submitted,
+.show-table {
   color: #201d1d;
   position: relative; 
   margin: 20px;
@@ -14,6 +15,9 @@
 }
 .review-submitted {
   background: linear-gradient(to bottom, rgb(60, 80, 60), #64fd92);
+}
+.show-table {
+  background: linear-gradient(to bottom, #787413, #fdf869);
 }
 
 .form-wrapper {
