--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
 
   <div class="db-links">
     <a href="{{ url_for('main.add_user') }}">Add User</a>
+    <a href="{{ url_for('main.show_user_table') }}">Show Users</a>
     <a href="/query-user">Find User</a>
     <a href="/edit-user">Edit User Infomation</a>
     <a href="/delete-user">Delete User</a>
